modules/gdscript/tests/scripts/analyzer/errors/nullable_index_access_with_nullable.gd
func test():
    var foo: String? = null
    var nullable_index: int? = null
    foo[nullable_index]